force-app/main/default/objects/ContentVersion/fields/encodedoptions__c.field-meta.xml
<CustomField>
    <fullName>encodedoptions__c</fullName>
    <label>encoded options</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>