force-app/main/default/objects/ContentVersion/fields/marq_origin_templatekey__c.field-meta.xml
<CustomField>
    <fullName>marq_origin_templatekey__c</fullName>
    <label>marq_origin_templatekey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>