force-app/main/default/objects/ContentVersion/fields/marq_original_project_created_at__c.field-meta.xml
<CustomField>
    <fullName>marq_original_project_created_at__c</fullName>
    <label>Marq project created at</label>
    <type>DateTime</type>
</CustomField>