force-app/main/default/objects/ContentVersion/fields/Opportunity_stage_at_creation__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_stage_at_creation__c</fullName>
    <label>Opportunity stage at creation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>