force-app/main/default/objects/ContentVersion/fields/projectid__c.field-meta.xml
<CustomField>
    <fullName>projectid__c</fullName>
    <label>projectid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>