force-app/main/default/objects/ContentVersion/fields/Public_Link__c.field-meta.xml
<CustomField>
    <fullName>Public_Link__c</fullName>
    <label>Public_Link</label>
    <type>Url</type>
</CustomField>